consumbale update